    . Add test for ->clickables()
    . Add test for getting/setting ->autodie()
    . Add test for getting/setting ->events()
    . Add 2-arg test for ->synchronize()
    . Make ->set_visible actually use ->field()
      so it can also set select fields?!
    . Make ->set_visible also support select+option inputs
    . Add tests for _field_by_name for #foo and .foo case

0.66 20120607
    . Add example plus test on how to request arbitrary hostnames
      via the Host: header from an IP.
    ! ->set_visible() ignores inputs with type="image" now (RT #70730)
    ! ->set_visible() respects the return value of ->is_visible. This
      may break your code as now less fields are considered "visible".
    + WWW::Mechanize::Firefox is currently tested against the following versions
        - 3.0.19
        - 3.5.19
        - 3.6.21
        - 5.0.1
        - 6.0.1
        - 7.0.1
        - 8.0
        - 9.0
        - 10.0.5 (ESR)
        - 13.0

0.65 20120409
    + Add ->add_header() and ->delete_header
      Adapted from code from http://d.hatena.ne.jp/oppara/20090410/p1
    + Also allow changing the User-Agent header now via ->agent()
    ! Bump prerequisite for MozRepl::RemoteObject to 0.31, which has
      moved __dive to MozRepl::RemoteObject::Methods

0.64 20120329
    ! Bump prerequisite for MozRepl::RemoteObject to 0.30, which contains
      a bugfix for clobbered $@
    . Add test for clicking a button by value
    . Add test for clicking a button by id
    . Add test for ->new(tab => 'current')
    . Add test for ->new(tab => 'non-existing-tab')
    . Add test for checking that ->content(format => 'bogus') fails
    . Add "document" option to ->content() to optionally specify the
      document object of which the content is desired.
    . Add more documentation for the ->content() method.
    + Report more Firefox / Javascript errors from within the perspective of the caller
      instead of reporting lines within Firefox.pm

0.63 20120316