@@ -11,6 +11,7 @@ TO DO:
     . Make ->set_visible also support select+option inputs
     . Add tests for _field_by_name for #foo and .foo case
 
+    . Fix RT #78706, where $mech->autoclose_tab() was broken
 0.66 20120607
     . Add example plus test on how to request arbitrary hostnames
       via the Host: header from an IP.
